exclude junit method running when building package